manifest/beta/web/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tictake-web
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tictake-tls
  routes:
    - match: HOST(`tictake.disam.dizatt.com`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: tictake-web-backend
          port: 8080
    # - match: Host(`sample-beta.csie.org`)
    #   kind: Rule
    #   services:
    #     - name: tictake-web-client
    #       port: 80
